--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,37 @@
-h2 {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 25px;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: inherit;
+}
+.game-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.score-container {
+    display: flex;
+    justify-content: space-around;
+    width: 600px;
+    padding: 14px;
+    margin-bottom: 40px;
+    margin-top: 70px;
+    border: 5px dotted black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    background-image: linear-gradient(130deg,rgb(144, 183, 255), rgb(149, 255, 232))
+}
+#score-title {
+    text-shadow: -5px 4px 4px white;
+}
+#time-title {
+    text-shadow: -5px 4px 4px white;
+}
+.start-button-container {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+
 }
 
 .grid {
@@ -8,7 +39,7 @@ h2 {
     flex-wrap: wrap;
     width: 606px;
     height: 606px;
-    border: 7px solid black;
+    border: 8px solid black;
 }
 .square {
     height: 200px;
@@ -19,3 +50,16 @@ h2 {
     background-image: url(https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fmedia-cache-ec0.pinimg.com%2F736x%2F76%2Fe6%2Fac%2F76e6acc08f7294023ea88b35b669738e.jpg&f=1&nofb=1);
     background-size:cover;
 }
+#start-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 30px;
+    border: 3px solid black;
+    border-radius: 20%;
+    width: 20rem;
+    height: 3rem;
+}
+
+
